[project]
name = "menu-agent"
version = "0.1.0"
description = "Local backend for multi-restaurant menu management + recommendation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlmodel>=0.0.16",
  "pydantic>=2.6",
]

[tool.uvicorn]
factory = false
